src/main/default/objects/Test_Data_Factory_Default__mdt/Test_Data_Factory_Default__mdt.object-meta.xml
<CustomObject>
    <description>Configure default values for SObject Factories and Scenarios.
These default values work even when SObjectFactory and SObjectFactoryScenario are not implemented.
Note that these values can be overwritten by createDefaults method.</description>
    <label>Test Data Factory Default</label>
    <pluralLabel>Test Data Factory Defaults</pluralLabel>
</CustomObject>