src/main/default/objects/Test_Data_Factory_Default__mdt/fields/Active_for_Default_Factory__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Default_Factory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This default value will be used when an SObject Factory is not implemented.</description>
    <inlineHelpText>This default value will be used when an SObject Factory is not implemented.</inlineHelpText>
    <label>Active for Default Factory</label>
    <type>Checkbox</type>
</CustomField>