src/main/default/objects/Test_Data_Factory_Default__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>65</length>
    <required>true</required>
    <type>Text</type>
</CustomField>