src/main/default/objects/Test_Data_Factory_Default__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <label>SObject API Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>