src/main/default/objects/Test_Data_Factory_Default__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The default value. The data type will be determined automatically based on the field API name.</description>
    <inlineHelpText>The default value. The data type will be determined automatically based on the field API name.</inlineHelpText>
    <label>Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>